--- a/default.conf
+++ b/default.conf
@@ -1,21 +1,45 @@
-server {
-    listen 80;
+# server {
+#     listen 80;
 
-    root /srv/www/cmt;
+#     root /home/david/cmt;
+#     index index.php index.html index.htm;
+
+#     server_name localhost;
+
+#     location / {
+#         try_files $uri $uri/ =404;
+#     }
+
+#     location ~ \.php$ {
+#         try_files $uri =404;
+#         fastcgi_split_path_info ^(.+\.php)(/.+)$;
+#         fastcgi_pass unix:/var/run/php/php7.0-fpm.sock;
+#         fastcgi_index index.php;
+#         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+#         include fastcgi_params;
+#     }
+# }
+
+server {
+    listen 80 default_server;
+
+    root /home/david/cmt;
     index index.php index.html index.htm;
 
-    server_name localhost;
+    server_name _;
 
     location / {
         try_files $uri $uri/ =404;
+        # root /home/david/cmt/wp;
+        # index index.php index.html index.htm;
     }
 
     location ~ \.php$ {
-        try_files $uri =404;
-        fastcgi_split_path_info ^(.+\.php)(/.+)$;
-        fastcgi_pass unix:/var/run/php/php7.0-fpm.sock;
-        fastcgi_index index.php;
-        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-        include fastcgi_params;
+       try_files $uri =404;
+       fastcgi_split_path_info ^(.+\.php)(/.+)$;
+       fastcgi_pass unix:/var/run/php/php7.0-fpm.sock;
+       fastcgi_index index.php;
+       fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+       include fastcgi_params;
     }
 }
